<resources>
    <string name="app_name">Academy fundamentals homework</string>
    <string name="title_activity_movie_details">MovieDetailsActivity</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_toolbar">Movies list</string>
    <string name="movie_137_min">137 MIN</string>
    <string name="movie_avengers_end_game">Avengers: End Game</string>
    <string name="movie_125_reviews">125 Reviews</string>
    <string name="movie_action_adventure_drama">Action, Adventure, Drama</string>
    <string name="movie_13_plus">13+</string>
    <string name="title_back">Back</string>
    <string name="title_cast">Cast</string>
    <string name="title_movies_list_toolbar">Movies list</string>
    <string name="storyline">Storyline</string>
    <string name="error_message">"Ошибка обновления данных"</string>
</resources>