<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/movie_card_view"
    android:layout_width="172dp"
    android:layout_height="296dp"
    android:clickable="true"
    android:focusable="true"
    app:cardCornerRadius="@dimen/radius_card_item"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:strokeColor="@color/strokeColorCardView"
    app:strokeWidth="1dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/backgroundColorItem">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/iv_shapeable"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="2dp"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="2dp"
            android:layout_marginBottom="48dp"
            android:adjustViewBounds="true"
            android:scaleType="fitXY"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.CornerSize12dp"
            app:srcCompat="@drawable/movie" />

        <ImageView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:src="@drawable/bc_gradient_movie"
            app:layout_constraintBottom_toBottomOf="@+id/iv_shapeable"
            app:layout_constraintEnd_toEndOf="@+id/iv_shapeable"
            app:layout_constraintStart_toStartOf="@+id/iv_shapeable"
            app:layout_constraintTop_toTopOf="@+id/iv_shapeable" />

        <TextView
            android:id="@+id/tv_age_limit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/movie_137_min"
            android:textColor="@color/textColorTitleTime"
            android:textSize="@dimen/font_tiny"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="24dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/movie_avengers_end_game"
            android:textColor="@color/textColorNameFilm"
            android:textSize="@dimen/font_small"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <RatingBar
            android:id="@+id/rating_bar"
            style="?android:attr/ratingBarStyleSmall"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="16dp"
            android:numStars="5"
            android:rating="4"
            android:stepSize="0.5"
            android:theme="@style/RatingBar.List"
            app:layout_constraintBottom_toTopOf="@+id/tv_name"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tv_reviews"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/movie_125_reviews"
            android:textColor="@color/textColorReview"
            android:textSize="@dimen/font_tiny"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/rating_bar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/rating_bar"
            app:layout_constraintTop_toTopOf="@+id/rating_bar" />

        <TextView
            android:id="@+id/tv_tags"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="2dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/movie_action_adventure_drama"
            android:textColor="@color/textColorTag"
            android:textSize="@dimen/font_tiny"
            app:layout_constraintBottom_toTopOf="@+id/rating_bar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tv_age"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/bc_tv_age"
            android:gravity="center"
            android:paddingTop="2dp"
            android:paddingBottom="2dp"
            android:text="@string/movie_13_plus"
            android:textColor="@color/whiteText"
            android:textSize="@dimen/font_smaller"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/iv_shapeable"
            app:layout_constraintTop_toTopOf="@+id/iv_shapeable" />

        <ImageView
            android:id="@+id/iv_like"
            android:layout_width="16dp"
            android:layout_height="14dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="8dp"
            android:src="@drawable/ic_like"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>